# vrchat-cachecleaner

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: cleaner.rs  main.rs
