[package]
name = "vrchat-cachecleaner"
version = "0.3.0"
edition = "2024"
authors = ["vicentefelipechile"]
license = "MIT"

[dependencies]
anyhow = "1.0.101"
auto-launch = "0.6.0"
directories = "6.0.0"
notify-rust = "4.12.0"
single-instance = "0.3.3"
sysinfo = "0.38.1"


[build-dependencies]
winres = "0.1.12"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
